deployment-scripts/test/reelcruit-candidate-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-candidate-test
  namespace: test
  labels:
    app: reelcruit-candidate-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-candidate-test
  template:
    metadata:
      labels:
        app: reelcruit-candidate-test
    spec:
      containers:
        - name: reelcruit-test
          image: reelcruitapp/reelcruit-candidate-frontend
          # image: reelcruitapp/reelcruit-candidate-frontend:test
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: reelcruit-candidate-test-svc
  namespace: test
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: reelcruit-candidate-test
