deployment-scripts/test/reelcruit-candidate-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candidate-fe-test-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: test-candidate.reelcruit.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reelcruit-candidate-test-svc
            port:
              number: 3000

   - host: www.test-candidate.reelcruit.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reelcruit-candidate-test-svc
            port:
              number: 3000
